--- a/views/layouts/admin-header.ejs
+++ b/views/layouts/admin-header.ejs
@@ -74,6 +74,10 @@
                         <i class="uil uil-panorama-h"></i>
                         <span class="link-name">Banners</span>
                     </a></li>
+                    <li><a href="/admin/salesreport">
+                        <i class="uil uil-panorama-h"></i>
+                        <span class="link-name">SalesReport</span>
+                    </a></li>
             </ul>
 
 
